# Aegis-Growth

./: .gitignore  PRD.md  PROJECT_STATUS.md  PROJECT_TREE.md  SETUP_SOLANA.md  ai_studio_code.ts  package-lock.json  simulation.py
.github/workflows/: deploy-devnet.yml
aegis-vault/: .gitignore  Anchor.toml  BUILD.md  Cargo.toml  DEPLOYMENT.md  GITHUB_DEPLOYMENT.md  KAMINO_INTEGRATION.md  QUICK_DEPLOY.md  README.md  TESTING.md  package-lock.json  package.json  setup-github-deploy.sh
aegis-vault/programs/aegis-vault/: Cargo.toml
aegis-vault/programs/aegis-vault/src/: errors.rs  lib.rs
aegis-vault/programs/aegis-vault/src/instructions/: deposit.rs  initialize_vault.rs  mod.rs  rebalance.rs  withdraw.rs
aegis-vault/programs/aegis-vault/src/lending/: kamino.rs  mod.rs
aegis-vault/programs/aegis-vault/src/logic/: state_machine.rs
aegis-vault/programs/aegis-vault/src/oracles/: mod.rs  pyth.rs  switchboard.rs
aegis-vault/programs/aegis-vault/src/state/: user_position.rs  vault.rs
aegis-vault/scripts/: build-native.sh  build.sh  deploy-devnet.sh  test.sh
aegis-vault/tests/: aegis-vault.ts
