[workspace]
members = [
    "programs/*"
]
resolver = "2"
[workspace.dependencies]
# Strict pinning to force compatible versions across the entire workspace
solana-program = "=1.18.26"
solana-zk-token-sdk = "=1.18.26"
spdx = "=0.10.6"
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
