[workspace]
members = [
    "programs/*"
]
resolver = "2"
[workspace.dependencies]
# Modern dependency resolution (no pins needed for latest Anchor/Rust)
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
