[features]
seeds = []
skip-lint = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
pyth-sdk-solana = "0.10.0"
# Strict pinning to match Solana 1.18.26 toolchain (Rust 1.75.0)
solana-program = { workspace = true }
solana-zk-token-sdk = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "aegis_vault"

[package]
name = "aegis-vault"
version = "0.1.0"
description = "Immutable delta-neutral yield optimizer on Solana"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
